--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -329,6 +329,7 @@
   "Please input reject Reason": "请输入拒绝原因",
   "Please select SSH key": "请选择SSH密钥",
   "Name should not be empty": "名称不能为空",
+  "Version No should not be empty": "版本号不能为空",
   "Invalid yaml": "非法的 yaml",
   "Version should not be empty": "版本不能为空",
   "Runtime should not be empty": "运行环境不能为空",
