fix: Version review error
* fix: ISV apply review error

--- a/src/locales/en/base.json
+++ b/src/locales/en/base.json
@@ -7,7 +7,7 @@
   },
   "more": "More..",
   "Back to link": "← Back to {{link}}",
-  "greet words": "Hi，{{name}}",
+  "greet words": "Hi,{{name}}",
   "role": "role",
   "role_admin": "Administrator",
   "role_developer": "Developer",
@@ -21,7 +21,7 @@
   "delete_user_desc": "Are you sure delete this user?",
   "No search data": "No results for search.",
   "operate cluster desc": "Are you sure {{operate}} this Cluster?",
-  "Create Runtime explain": "Runtime is Cloud provider, It can be AWS，GCE, QingCloud,Kubernetes,OpenStack,VMwareVSphere etc. give OpenPitrix permission to access those cloud provider, OpenPitrix willmanage all of them applications.",
+  "Create Runtime explain": "Runtime is Cloud provider, It can be AWS,GCE, QingCloud,Kubernetes,OpenStack,VMwareVSphere etc. give OpenPitrix permission to access those cloud provider, OpenPitrix willmanage all of them applications.",
   "Create Repo explain": "In OpenPitrix, Every application deployed is base package repository, on the other words, If you want to use OpenPitrix for your multi-cloud application manager, you need create repository first. Application manager can store package to http/https server or S3 object storage.",
   "Deploy App explain": "OpenPitrix deploy application to any cloud provider, it's very simple, selected application want to deploy ,and then choose runtime (cloud provider), and press the button. it's done.",
   "NO_SEARCH_DATA": "No Application Data!",
@@ -75,7 +75,7 @@
   "DELETE_RUNTIME_CONFIRM": "Are you sure to delete this runtime ?",
   "TIPS_ADJUST_APP_CATE": "Please adjust category of {{appNames}} these {{appCount}} apps",
   "Upload_Package_Error": "Some files have errors, please check",
-  "APP_TOTAL_DESCRIPTION": "Openpitrix oficial store，there are {{total}} apps",
+  "APP_TOTAL_DESCRIPTION": "Openpitrix oficial store,there are {{total}} apps",
   "APP_SHELF_AND_SELL": "Your application shelf to official store and start selling ~",
 
   "delivery_type_intro_vm": "Combined with OpenPitrix development specifications, applications are packaged into mirrors, and users deploy applications quickly based on mirrors.",
@@ -166,6 +166,13 @@
   "AUTHORIZER_PHONE_FORMAT_INFO": "Input format error, correct format for the first 11 digits",
   "BANK_ACCOUNT_NUMBER_FORMAT_INFO": "Input format error, correct format for 12 to 19 digits",
   "VERSION_NO_FORMAT_INFO": "Input format error, correct format for decimal point and digital composition",
+
+  "ISV_REVIEW_PASS": "App service provider passed the app version",
+  "BUSINESS_ADMIN_REVIEW_PASS": "Platform business auditor passed the app version",
+  "DEVELOP_ADMIN_REVIEW_PASS": "The platform technology auditor has passed the app version",
+  "ISV_REJECT_PASS": "App service provider rejected the app version",
+  "BUSINESS_ADMIN_REJECT_PASS": "Platform Business auditor rejected the app version",
+  "DEVELOP_ADMIN_REJECT_PASS": "Platform technology auditor rejected the app version",
 
   "suspend-app-note-desc": "After the app is off the shelf, users can't buy it from the store. Are you sure offline the app?",
   "recover-app-note-desc": "After the app goes on the shelf, the relevant Off-Shelf version will become on the shelf. Are you sure go on the shelf?",
