--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -160,6 +160,9 @@
   "ISV_REVIEW_PASS": "应用服务商审核通过了该应用版本",
   "BUSINESS_ADMIN_REVIEW_PASS": "平台商务审核通过了该应用版本",
   "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本",
+  "ISV_REJECT_PASS": "应用服务商审核拒绝了该应用版本",
+  "BUSINESS_ADMIN_REJECT_PASS": "平台商务审核拒绝了该应用版本",
+  "DEVELOP_ADMIN_REJECT_PASS": "平台技术审核审核拒绝了该应用版本",
   "APP_TOTAL_DESCRIPTION": "Openpitrix 官方商店，有 {{total}} 款应用。",
   "Screenshot": "截图",
   "Version No": "版本号",
