--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -1,4 +1,26 @@
 {
+  "Helm runtime namespace is empty": "命名空间为空",
+  "Selected organization": "所选组织",
+  "Set role": "设置角色",
+  "Role Name": "角色名称",
+  "Create admin role": "创建管理后台角色",
+  "Edit info": "编辑信息",
+  "Disable": "禁用",
+  "Search app name or ID": "搜索应用名称或 ID",
+  "count": "个",
+  "Create group": "创建组织",
+  "Delete group": "删除组织",
+  "Rename group": "重命名组织",
+  "Add user": "增加用户",
+  "Leave group": "离开组织",
+  "Parent group $groupName": "上一级组织名：{{groupName}}",
+  "Do you sure to delete $groupName": "您确定要删除组织 {{groupName}} 吗？",
+  "Do you sure to leaveGroup $groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
+  "DELETE_GROUP_TIP": "提示：删除操作会将所有子级组织以及其绑定的用户关系",
+  "Group name": "组织名称",
+  "Add the child node": "添加下一级",
+  "All members": "全部成员",
+  "Team and member": "团队与成员",
   "Empty user": "用户名为空",
   "Empty role": "角色为空",
   "Empty email": "邮箱为空",
