--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -27,12 +27,13 @@
   "Leave group": "离开组织",
   "Selected": "所选",
   "of setting": "的设置",
-  "Parent group $groupName": "上一级组织名：{{groupName}}",
+  "ISV": "应用服务商",
+  "Parent group groupName": "上一级组织名：{{groupName}}",
   "Create role success": "角色创建成功",
   "Create_Role_Success_Tip": "新角色默认是停用状态，请完成权限设置后再启用。",
-  "Do you sure to delete $groupName": "您确定要删除组织 {{groupName}} 吗？",
-  "Do you sure to delete $roleName": "您确定要删除组织 {{roleName}} 吗？",
-  "Do you sure to leaveGroup $groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
+  "Do you sure to delete groupName": "您确定要删除组织 {{groupName}} 吗？",
+  "Do you sure to delete roleName": "您确定要删除组织 {{roleName}} 吗？",
+  "Do you sure to leaveGroup groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
   "DELETE_GROUP_TIP": "提示：删除操作会将所有子级组织以及其绑定的用户关系",
   "Group name": "组织名称",
   "Add the child node": "添加下一级",
