fix: User portal top nav runtime label

--- a/src/locales/zh/runtime.json
+++ b/src/locales/zh/runtime.json
@@ -6,5 +6,6 @@
   "Delete runtime credential successfully": "删除授权信息成功",
   "TIPS_LOGIN_PLATFORM_CONSOLE": "登录{{platform}}控制台",
   "TIPS_ADD_CREDENTIAL_1": "进入API密钥管理界面",
-  "TIPS_ADD_CREDENTIAL_2": "点击创建，并下载密钥文件"
+  "TIPS_ADD_CREDENTIAL_2": "点击创建，并下载密钥文件",
+  "User runtime": "运行环境"
 }
