--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -19,6 +19,7 @@
   "Operation list": "操作列表",
   "Edit info": "编辑信息",
   "Set permission": "设置权限",
+  "Delete role": "删除角色",
   "Disable": "禁用",
   "Search app name or ID": "搜索应用名称或 ID",
   "count": "个",
