--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -1,4 +1,47 @@
 {
+  "All": "全部",
+  "All actions": "全部操作",
+  "Helm runtime namespace is empty": "命名空间为空",
+  "Selected organization": "所选组织",
+  "Set role": "设置角色",
+  "Set_Role_Title": "请为 {{names}} 账户设置角色",
+  "Set_Role_Title_For_Multi_User": "请为已选择的 {{names}} 等 {{count}} 个账户设置新角色",
+  "Role Name": "角色名称",
+  "Data range": "数据范围",
+  "data_level_all": "所有数据",
+  "data_level_group": "部门内",
+  "data_level_self": "自己",
+  "Create admin role": "创建管理后台角色",
+  "BIND_ACTION_COUNT": "共 {{total}} 项，开启 {{selectedCount}} 项目",
+  "BIND_ACTION_COUNT_ALL": "共 {{total}} 项，开全部开启",
+  "Admin Role Title Count": "管理员后台角色({{count}})",
+  "Normal Role Title Count": "终端角色({{count}})",
+  "Operation list": "操作列表",
+  "Edit info": "编辑信息",
+  "Set permission": "设置权限",
+  "Delete role": "删除角色",
+  "Disable": "禁用",
+  "Search app name or ID": "搜索应用名称或 ID",
+  "count": "个",
+  "Create group": "创建组织",
+  "Delete group": "删除组织",
+  "Rename group": "重命名组织",
+  "Add user": "增加用户",
+  "Leave group": "离开组织",
+  "Selected": "所选",
+  "of setting": "的设置",
+  "ISV": "应用服务商",
+  "Parent group groupName": "上一级组织名：{{groupName}}",
+  "Create role success": "角色创建成功",
+  "Create_Role_Success_Tip": "新角色默认是停用状态，请完成权限设置后再启用。",
+  "Do you sure to delete groupName": "您确定要删除组织 {{groupName}} 吗？",
+  "Do you sure to delete roleName": "您确定要删除组织 {{roleName}} 吗？",
+  "Do you sure to leaveGroup groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
+  "DELETE_GROUP_TIP": "提示：删除操作会将所有子级组织以及其绑定的用户关系",
+  "Group name": "组织名称",
+  "Add the child node": "添加下一级",
+  "All members": "全部成员",
+  "Team and member": "团队与成员",
   "Empty user": "用户名为空",
   "Empty role": "角色为空",
   "Empty email": "邮箱为空",
