fix: User instance page query active apps
Fix user portal add notification

--- a/src/locales/zh/cluster.json
+++ b/src/locales/zh/cluster.json
@@ -2,6 +2,6 @@
   "Instances": "实例",
   "Instance ID": "实例 ID",
   "Deploy Runtime": "部署环境",
-  "Deploy Instance": "部署实例"
-
+  "Deploy Instance": "部署实例",
+  "My Instances": "我的实例"
 }
