fix: Admin user filterList

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -18,6 +18,7 @@
   "Normal Role Title Count": "终端角色({{count}})",
   "Operation list": "操作列表",
   "Edit info": "编辑信息",
+  "Change password successful": "修改密码成功",
   "isv": "应用服务商",
   "user": "用户",
   "Set permission": "设置权限",
@@ -33,6 +34,8 @@
   "Selected": "所选",
   "of setting": "的设置",
   "ISV": "应用服务商",
+  "Activation": "激活",
+  "Not activation": "非激活",
   "Parent group groupName": "上一级组织名：{{groupName}}",
   "Create role success": "角色创建成功",
   "Create_Role_Success_Tip": "新角色默认是停用状态，请完成权限设置后再启用。",
