--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -245,5 +245,8 @@
   "App review detail": "应用审核详情",
   "Audit content": "审核内容",
   "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰，",
-  "view detail standard": "查看详细标准"
+  "view detail standard": "查看详细标准",
+
+  "Create test runtime": "创建测试环境",
+  "NO_RUNTIME_TO_DEPLOY": "当前没有可用的环境用来部署测试实例。"
 }
