fix: AM url api

--- a/src/locales/en/user.json
+++ b/src/locales/en/user.json
@@ -1,3 +1,4 @@
 {
+  "Global Admin Role description": "Maximum privilege administrator, cannot delete and modify",
   "DELETE_GROUP_TIP": "TIPS: Organizations with bound users and organizations with children cannot be deleted"
 }
