--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -7,6 +7,7 @@
   "Set_Role_Title": "请为 {{names}} 账户设置角色",
   "Set_Role_Title_For_Multi_User": "请为已选择的 {{names}} 等 {{count}} 个账户设置新角色",
   "Role Name": "角色名称",
+  "Global Admin Role description": "最高权限管理员，不可删除和修改",
   "Data range": "数据范围",
   "data_level_all": "所有数据",
   "data_level_group": "部门内",
@@ -18,6 +19,9 @@
   "Normal Role Title Count": "终端角色({{count}})",
   "Operation list": "操作列表",
   "Edit info": "编辑信息",
+  "Can't delete, can edit": "无法删除，可以编辑",
+  "Normal_Role_Description_isv": "应用服务商中心",
+  "Normal_Role_Description_user": "应用中心",
   "Change password successful": "修改密码成功",
   "isv": "应用服务商",
   "user": "用户",
