--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -369,6 +369,7 @@
   "News": "消息",
   "Sandbox": "沙盒",
   "Instance": "实例",
+  "instance": "实例",
   "Environment": "环境",
   "Account Info": "账户信息",
   "Notice settings": "通知设置",
