--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -282,6 +282,9 @@
   "Attach SSH Key": "绑定SSH密钥",
   "Detach SSH Key": "解绑SSH密钥",
   "detach_key_desc": "您确定要解绑该SSH密钥与所选节点的绑定吗?",
+  "detach_all_key_desc": "您确定要解绑该SSH密钥下所有节点的绑定吗?",
+  "Detach all nodes": "解绑所有节点",
+  "Create SSH key": "创建新的 SSH 密钥",
   "Attach": "绑定",
   "Detach": "解绑",
   "App Store": "应用商店",
