feat: Change runtime page

--- a/src/locales/zh/runtime.json
+++ b/src/locales/zh/runtime.json
@@ -1,4 +1,7 @@
 {
+  "IP address": "IP 地址",
+  "Instance count": "实例数",
+  "Agent Instance count": "代理数",
   "Modify runtime successfully": "修改环境成功",
   "Switch runtime credential successfully": "切换授权信息成功",
   "Delete runtime successfully": "删除环境成功",
