--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -25,7 +25,9 @@
   "Change password successful": "修改密码成功",
   "isv": "应用服务商",
   "user": "用户",
+  "Permission": "权限",
   "Set permission": "设置权限",
+  "Create a role": "创建新角色",
   "Delete role": "删除角色",
   "Disable": "禁用",
   "Search app name or ID": "搜索应用名称或 ID",
@@ -47,6 +49,7 @@
   "Do you sure to delete groupName": "您确定要删除组织 {{groupName}} 吗？",
   "Do you sure to delete roleName": "您确定要删除角色 {{roleName}} 吗？",
   "Do you sure to leaveGroup groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
+  "ISV_ROLE_CREATE_TIP": "如果以上角色不能满足管理需求，可以",
   "DELETE_GROUP_TIP": "提示：删除操作会将所有子级组织以及其绑定的用户关系",
   "Group name": "组织名称",
   "Add the child node": "添加下一级",
