--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -26,6 +26,7 @@
   "isv": "应用服务商",
   "user": "用户",
   "Permission": "权限",
+  "Module permission": "模块权限",
   "Set permission": "设置权限",
   "Create a role": "创建新角色",
   "Delete role": "删除角色",
