refactor: ISV AM

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -38,6 +38,7 @@
   "Rename group": "重命名组织",
   "Add user": "增加用户",
   "Leave group": "离开组织",
+  "Super admin": "超级管理员",
   "Selected": "所选",
   "of setting": "的设置",
   "ISV": "应用服务商",
