fix: Code review

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -39,6 +39,8 @@
   "Add user": "增加用户",
   "Leave group": "离开组织",
   "Super admin": "超级管理员",
+  "Admin users": "管理用户",
+  "Platform user": "平台用户",
   "Selected": "所选",
   "of setting": "的设置",
   "ISV": "应用服务商",
