--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -26,6 +26,7 @@
   "isv": "应用服务商",
   "user": "用户",
   "Permission": "权限",
+  "Module permission": "模块权限",
   "Set permission": "设置权限",
   "Create a role": "创建新角色",
   "Delete role": "删除角色",
@@ -37,6 +38,9 @@
   "Rename group": "重命名组织",
   "Add user": "增加用户",
   "Leave group": "离开组织",
+  "Super admin": "超级管理员",
+  "Admin users": "管理用户",
+  "Platform user": "平台用户",
   "Selected": "所选",
   "of setting": "的设置",
   "ISV": "应用服务商",
