feat: PopoverIcon component

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -332,6 +332,7 @@
   "Develop Center": "开发中心",
   "Provider Center": "服务商中心",
   "Manage Console": "管理控制台",
+  "Manage backstage": "管理后台",
   "Document": "文档",
   "Already create new version": "已创建新版本",
   "None": "无",
@@ -401,6 +402,7 @@
   "No authorization info": "没有授权信息",
   "Add new env": "添加新环境",
   "Switch authorization info": "切换授权信息",
+  "Switch runtime authorization info": "切换「{{runtimeName}}」授权信息",
   "Add authorization info": "添加授权信息",
   "Add runtime": "添加环境",
   "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加测试环境 {{activeStep}}/{{steps}}",
