--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -340,6 +340,7 @@
   "Node Role": "节点角色",
   "DEL_RESOURCE_TIPS": "确定要删除 {{resource_ids}} ?",
   "kubeconfig desc": "用于配置集群间访问的文件，在 Kubernetes 环境 “~/.kube/config” 查看",
+  "Please select": "请选择",
   "Please select one repo": "请选择一个仓库",
   "Please input reject Reason": "请输入拒绝原因",
   "Please select SSH key": "请选择SSH密钥",
@@ -405,8 +406,8 @@
   "Switch runtime authorization info": "切换「{{runtimeName}}」授权信息",
   "Add authorization info": "添加授权信息",
   "Add runtime": "添加环境",
-  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加测试环境 {{activeStep}}/{{steps}}",
-  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供环境授权信息",
+  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加{{env_name}} {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供 {{runtime_name}} 环境授权信息",
   "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
   "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
   "STEPPER_FOOTER_CREATE_RUNTIME_1": "关于授权信息的保密与安全问题请参看",
