refactor: User portal issues part-2 (#832)
* refactor: Loading component

* refactor: Personal center

* refine: Popover Icon component

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -332,6 +332,7 @@
   "Develop Center": "开发中心",
   "Provider Center": "服务商中心",
   "Manage Console": "管理控制台",
+  "Manage backstage": "管理后台",
   "Document": "文档",
   "Already create new version": "已创建新版本",
   "None": "无",
@@ -339,6 +340,7 @@
   "Node Role": "节点角色",
   "DEL_RESOURCE_TIPS": "确定要删除 {{resource_ids}} ?",
   "kubeconfig desc": "用于配置集群间访问的文件，在 Kubernetes 环境 “~/.kube/config” 查看",
+  "Please select": "请选择",
   "Please select one repo": "请选择一个仓库",
   "Please input reject Reason": "请输入拒绝原因",
   "Please select SSH key": "请选择SSH密钥",
@@ -396,13 +398,16 @@
   "Not support currently": "暂不支持",
   "Authorization info": "授权信息",
   "TIPS_NOT_ADD_ENV": "你还没有添加过 {{env}} 的测试环境",
+  "TIPS_NOT_ADD_AUTH": "你还没有添加过 {{env}} 的授权信息",
   "No env": "没有环境",
+  "No authorization info": "没有授权信息",
   "Add new env": "添加新环境",
   "Switch authorization info": "切换授权信息",
+  "Switch runtime authorization info": "切换「{{runtimeName}}」授权信息",
   "Add authorization info": "添加授权信息",
   "Add runtime": "添加环境",
-  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加测试环境 {{activeStep}}/{{steps}}",
-  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供环境授权信息",
+  "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加{{env_name}} {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_RUNTIME_1": "提供 {{runtime_name}} 环境授权信息",
   "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
   "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
   "STEPPER_FOOTER_CREATE_RUNTIME_1": "关于授权信息的保密与安全问题请参看",
