refactor: Modify version review by new api and auth

--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -159,11 +159,11 @@
   "STEPPER_FOOTER_VERSION_SUBMIT_CHECK_3": "以上为最终应用上架后的展示效果。",
   "Please input the reason for reject": "请您填写拒绝原因",
   "ISV_REVIEW_PASS": "应用服务商审核通过了该应用版本",
-  "BUSINESS_ADMIN_REVIEW_PASS": "平台商务审核通过了该应用版本",
-  "DEVELOP_ADMIN_REVIEW_PASS": "平台技术审核审核通过了该应用版本",
   "ISV_REJECT_PASS": "应用服务商审核拒绝了该应用版本",
-  "BUSINESS_ADMIN_REJECT_PASS": "平台商务审核拒绝了该应用版本",
-  "DEVELOP_ADMIN_REJECT_PASS": "平台技术审核审核拒绝了该应用版本",
+  "BUSINESS_REVIEW_PASS": "平台商务审核通过了该应用版本",
+  "BUSINESS_REJECT_PASS": "平台商务审核拒绝了该应用版本",
+  "TECHNICAL_REVIEW_PASS": "平台技术审核审核通过了该应用版本",
+  "TECHNICAL_REJECT_PASS": "平台技术审核审核拒绝了该应用版本",
   "APP_TOTAL_DESCRIPTION": "Openpitrix 官方商店，有 {{total}} 款应用。",
   "Screenshot": "截图",
   "Version No": "版本号",
