refactor: Create runtime

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -407,10 +407,14 @@
   "Add authorization info": "添加授权信息",
   "Add runtime": "添加环境",
   "STEPPER_NAME_CREATE_RUNTIME_HEADER": "添加{{env_name}} {{activeStep}}/{{steps}}",
+  "STEPPER_TITLE_CREATE_RUNTIME_0": "请选择平台",
   "STEPPER_TITLE_CREATE_RUNTIME_1": "提供 {{runtime_name}} 环境授权信息",
   "STEPPER_TITLE_CREATE_RUNTIME_2": "设置环境信息",
   "STEPPER_HEADER_CREATE_RUNTIME_2": "「提供环境授权信息」",
+  "STEPPER_FOOTER_CREATE_RUNTIME_0": "关于授权信息的保密与安全问题请参看",
   "STEPPER_FOOTER_CREATE_RUNTIME_1": "关于授权信息的保密与安全问题请参看",
+  "STEPPER_HEADER_CREATE_RUNTIME_1": "「选择平台」",
+  "LINK_STEPPER_FOOTER_CREATE_RUNTIME_0": "《平台服务条款》",
   "LINK_STEPPER_FOOTER_CREATE_RUNTIME_1": "《平台服务条款》",
   "STEPPER_FOOTER_CREATE_RUNTIME_2": "关于授权信息的保密与安全问题请参看",
   "LINK_STEPPER_FOOTER_CREATE_RUNTIME_2": "《平台服务条款》",
