--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -51,7 +51,7 @@
   "Search for app name or ID": "搜索应用名称或 ID",
   "STEPPER_NAME_CREATE_APP_HEADER": "创建应用 {{activeStep}}/{{steps}}",
   "STEPPER_TITLE_CREATE_APP_1": "选择应用的交付类型",
-  "STEPPER_TITLE_CREATE_APP_2": "上传配置文件",
+  "STEPPER_TITLE_CREATE_APP_2": "上传 {{ versionTypeName }} 配置文件",
   "STEPPER_TITLE_CREATE_APP_3": "确认应用基本信息",
   "STEPPER_HEADER_CREATE_APP_2": "「选择应用的交付类型」",
   "STEPPER_HEADER_CREATE_APP_3": "「上传配置文件」",
@@ -68,7 +68,7 @@
   "STEPPER_FOOTER_CREATE_APP_VERSION_2": "完整的应用开发规范请参看",
   "STEPPER_FOOTER_CREATE_APP_VERSION_3": "以上信息调整之后将会自动更新配置文件中的对应内容。",
   "LINK_STEPPER_FOOTER_CREATE_APP_VERSION_2": "《Helm 规范及应用开发》。",
-  "STEPPER_NAME_ADD_APP_VERSION_HEADER": "添加新版本",
+  "STEPPER_NAME_ADD_APP_VERSION_HEADER": "为 {{appName}} 添加版本",
   "STEPPER_TITLE_ADD_APP_VERSION_1": "上传配置文件",
   "STEPPER_FOOTER_ADD_APP_VERSION_1": "完整的应用开发规范请参看",
   "LINK_STEPPER_FOOTER_ADD_APP_VERSION_1": "《Helm 规范及应用开发》。",
