refactor: Set group

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -39,6 +39,7 @@
   "Rename group": "重命名组织",
   "Add user": "增加用户",
   "Leave group": "离开组织",
+  "Set group": "设置组织",
   "Super admin": "超级管理员",
   "Admin users": "管理用户",
   "Platform user": "平台用户",
