refactor: Create app and develop portal style (#876)

--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -46,12 +46,12 @@
   "delivery_type_intro_native": "云端集中式托管软件及其相关的数据，软件仅需透过互联网，而不须透过安装即可使用。",
   "delivery_type_intro_serveless": "Serverless Framework是无服务器应用框架和生态系统。",
   "Please select a delivery type!": "请选择一个交付方式!",
-  "Linkto_Intro_App": "查看开发规范",
+  "Linkto_Intro_App": "查看开发规范 →",
   "Added": "已添加",
   "Search for app name or ID": "搜索应用名称或 ID",
   "STEPPER_NAME_CREATE_APP_HEADER": "创建应用 {{activeStep}}/{{steps}}",
   "STEPPER_TITLE_CREATE_APP_1": "选择应用的交付类型",
-  "STEPPER_TITLE_CREATE_APP_2": "上传配置文件",
+  "STEPPER_TITLE_CREATE_APP_2": "上传 {{ versionTypeName }} 配置文件",
   "STEPPER_TITLE_CREATE_APP_3": "确认应用基本信息",
   "STEPPER_HEADER_CREATE_APP_2": "「选择应用的交付类型」",
   "STEPPER_HEADER_CREATE_APP_3": "「上传配置文件」",
@@ -59,16 +59,16 @@
   "STEPPER_FOOTER_CREATE_APP_2": "完整的应用开发规范请参看",
   "STEPPER_FOOTER_CREATE_APP_3": "以上信息调整之后将会自动更新配置文件中的对应内容。",
   "LINK_STEPPER_FOOTER_CREATE_APP_2": "《Helm 规范及应用开发》。",
-  "STEPPER_NAME_CREATE_APP_VERSION_HEADER": "添加交付方式 {{activeStep}}/{{steps}}",
+  "STEPPER_NAME_CREATE_APP_VERSION_HEADER": "为 {{appName}} 添加交付方式 {{activeStep}}/{{steps}}",
   "STEPPER_TITLE_CREATE_APP_VERSION_1": "选择应用的交付类型",
-  "STEPPER_TITLE_CREATE_APP_VERSION_2": "上传配置文件",
+  "STEPPER_TITLE_CREATE_APP_VERSION_2": "上传 {{ versionTypeName }} 配置文件",
   "STEPPER_TITLE_CREATE_APP_VERSION_3": "确认应用基本信息",
-  "STEPPER_HEADER_CREATE_APP_VERSION_2": "「上传配置文件」",
+  "STEPPER_HEADER_CREATE_APP_VERSION_2": "「上传 {{ versionTypeName }} 配置文件」",
   "STEPPER_FOOTER_CREATE_APP_VERSION_1": "一款应用可以支持多种交付方式，管理过程中可以随时添加。",
   "STEPPER_FOOTER_CREATE_APP_VERSION_2": "完整的应用开发规范请参看",
   "STEPPER_FOOTER_CREATE_APP_VERSION_3": "以上信息调整之后将会自动更新配置文件中的对应内容。",
   "LINK_STEPPER_FOOTER_CREATE_APP_VERSION_2": "《Helm 规范及应用开发》。",
-  "STEPPER_NAME_ADD_APP_VERSION_HEADER": "添加新版本",
+  "STEPPER_NAME_ADD_APP_VERSION_HEADER": "为 {{appName}} 添加版本",
   "STEPPER_TITLE_ADD_APP_VERSION_1": "上传配置文件",
   "STEPPER_FOOTER_ADD_APP_VERSION_1": "完整的应用开发规范请参看",
   "LINK_STEPPER_FOOTER_ADD_APP_VERSION_1": "《Helm 规范及应用开发》。",
