refactor: Add a Link component to check action

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -43,6 +43,7 @@
   "Super admin": "超级管理员",
   "Admin users": "管理用户",
   "Platform user": "平台用户",
+  "Please select a group": "请选择组织",
   "Selected": "所选",
   "of setting": "的设置",
   "ISV": "应用服务商",
