fix: Add ISV query in app detail
* fix: Review detail page style

--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -144,6 +144,7 @@
   "Instructions": "使用说明",
   "Terms of service": "服务条款",
   "User Evaluation": "用户评价",
+  "My Evaluation": "我的评价",
   "Select file": "选择文件",
   "Preview": "预览",
   "Processed": "已处理",
