--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -102,7 +102,7 @@
   "Esc": "退出",
   "Congratulations": "祝贺!",
   "Deploy & Test": "部署 & 测试",
-  "View in Store": "在商店中查看",
+  "View in Store": "去商店中查看",
   "Tips": "提示",
   "Operations": "操作",
   "Operator": "操作者",
