refactor: Admin persmission

--- a/src/locales/zh/user.json
+++ b/src/locales/zh/user.json
@@ -35,8 +35,10 @@
   "Search app name or ID": "搜索应用名称或 ID",
   "count": "个",
   "Create group": "创建组织",
+  "Create new organization": "添加新的组织机构",
+  "GROUP_POSITION": "位置：{{ position }}",
   "Delete group": "删除组织",
-  "Rename group": "重命名组织",
+  "Rename group": "重命名组织机构",
   "Add user": "增加用户",
   "Leave group": "离开组织",
   "Set group": "设置组织",
@@ -57,7 +59,8 @@
   "Do you sure to delete roleName": "您确定要删除角色 {{roleName}} 吗？",
   "Do you sure to leaveGroup groupName": "确定为选中的 {{names}} {{count}} 账号离开组织",
   "ISV_ROLE_CREATE_TIP": "如果以上角色不能满足管理需求，可以",
-  "DELETE_GROUP_TIP": "提示：删除操作会将所有子级组织以及其绑定的用户关系",
+  "DELETE_GROUP_TIP": "删除操作需要确保先删除子级组织以及其绑定的用户关系",
+  "SELECT_GROUP": "所选组织机构：{{ position }}",
   "Group name": "组织名称",
   "Add the child node": "添加下一级",
   "All members": "全部成员",
