--- a/src/locales/zh/settting.json
+++ b/src/locales/zh/settting.json
@@ -20,6 +20,7 @@
   "Connect success": "连接成功！",
   "Connect failed": "连接失败 :(",
   "User authentication": "用户身份验证",
+  "Visit address": "访问地址",
   "CLOUD-ENVIRONMENT-DESCRIBE": "平台的用户可以将以下开启的云环境对接到平台中来，做为实例或测试实例运行的环境。",
   "Platform setting": "平台设置"
 }
