fix: Clusters table add verison and user info show
* fix: Cluster and detail page for three roles show

* fix: Preview app detail no isv info

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -59,6 +59,7 @@
   "Public": "公共",
   "Private": "私有",
   "Nodes": "节点",
+  "Node ID": "节点ID",
   "Delete App": "删除应用",
   "Delete App desc": "您确定要删除该应用吗?",
   "Choose App Category": "选择应用分类",
