fix: Home app detail should query active apps

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -85,6 +85,7 @@
   "Delete Version": "删除版本",
   "Delete Version desc": "您确定要删除该版本吗?",
   "Search Clusters": "搜索集群",
+  "Search Instances": "搜索实例",
   "Search Version": "搜索版本",
   "App Version": "应用版本",
   "Version Name": "版本名称",
@@ -387,6 +388,7 @@
   "Customer-Instances": "用户-实例",
   "Sandbox-Instance detail": "沙盒-实例详情",
   "Customer-Instance detail": "用户-实例详情",
+  "Instance detail": "实例详情",
   "Record": "记录",
   "Version": "版本",
   "developer": "开发者",
