--- a/src/locales/en/base.json
+++ b/src/locales/en/base.json
@@ -182,5 +182,7 @@
   "suspend-version-note-desc": "After the version is off the shelf, the associated app will not display the version. Are you sure offline the version?",
   "recover-version-note-desc": "After the version goes on the shelf, , the associated app will display the version. Are you sure go on the shelf?",
 
-  "DELETE_APP_DESCRIPTION": "Are you sure delete the app \"{{appName}}\"?"
+  "DELETE_APP_DESCRIPTION": "Are you sure delete the app \"{{appName}}\"?",
+  "DEPLOYED_APP_DESCRIPTION": "All the applications you have deployed will be shown here.",
+  "MY_INSTANCES_DESCRIPTION": "List of instances created based on the application."
 }
