--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -252,5 +252,9 @@
   "Create test runtime": "创建测试环境",
   "NO_RUNTIME_TO_DEPLOY": "当前没有可用的环境用来部署{{instance}}。",
 
-  "DELETE_APP_DESCRIPTION": "您确定要删除应用【{{appName}}】吗?"
+  "DELETE_APP_DESCRIPTION": "您确定要删除应用【{{appName}}】吗?",
+  "Total of instances": "实例总数",
+  "Last deploy time": "上次部署时间",
+  "DEPLOYED_APP_DESCRIPTION": "所有你部署过的应用都会展示在此。",
+  "MY_INSTANCES_DESCRIPTION": "基于应用创建出的实例列表。"
 }
