--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -59,6 +59,7 @@
   "Public": "公共",
   "Private": "私有",
   "Nodes": "节点",
+  "Node ID": "节点ID",
   "Delete App": "删除应用",
   "Delete App desc": "您确定要删除该应用吗?",
   "Choose App Category": "选择应用分类",
@@ -84,6 +85,7 @@
   "Delete Version": "删除版本",
   "Delete Version desc": "您确定要删除该版本吗?",
   "Search Clusters": "搜索集群",
+  "Search Instances": "搜索实例",
   "Search Version": "搜索版本",
   "App Version": "应用版本",
   "Version Name": "版本名称",
@@ -386,6 +388,7 @@
   "Customer-Instances": "用户-实例",
   "Sandbox-Instance detail": "沙盒-实例详情",
   "Customer-Instance detail": "用户-实例详情",
+  "Instance detail": "实例详情",
   "Record": "记录",
   "Version": "版本",
   "developer": "开发者",
