fix: Modify nav style

--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -333,6 +333,7 @@
   "QingCloud App Center": "QingCloud 应用中心",
   "Develop Center": "开发中心",
   "Provider Center": "服务商中心",
+  "Back to Provider Center": "返回服务商中心",
   "Manage Console": "管理控制台",
   "Manage backstage": "管理后台",
   "Document": "文档",
