fix: Test email server

--- a/src/locales/zh/settting.json
+++ b/src/locales/zh/settting.json
@@ -6,6 +6,7 @@
   "SMS": "短信",
   "Wechat": "微信",
   "for example": "例如",
+  "Platform Name": "平台名称",
   "Mail server config": "邮件服务器配置",
   "Server protocol": "服务器协议",
   "Server host name": "服务器主机名",
