fix: Deploy app no valid version

--- a/src/locales/zh/deploy.json
+++ b/src/locales/zh/deploy.json
@@ -11,5 +11,6 @@
   "STEPPER_NAME_APP_DEPLOY_HEADER": "部署",
   "STEPPER_TITLE_APP_DEPLOY_1": "部署实例",
   "STEPPER_FOOTER_APP_DEPLOY_1": "部署完成的实例将会出现在「我的实例」列表中",
-  "HELM_APP_NAME_TIP": "小写字母开头，最长14个字符（支持数字/小写字母/连字符）"
+  "HELM_APP_NAME_TIP": "小写字母开头，最长14个字符（支持数字/小写字母/连字符）",
+  "No available version": "没有可用版本"
 }
