--- a/src/locales/zh/base.json
+++ b/src/locales/zh/base.json
@@ -498,5 +498,6 @@
   "Data not changed": "数据未修改",
 
   "Back home": " 返回首页",
-  "Sorry, the page you visited does not exist": "抱歉，您访问的页面不存在。"
+  "Sorry, the page you visited does not exist": "抱歉，您访问的页面不存在。",
+  "Invalid operation": "非法操作"
 }
