--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -137,6 +137,7 @@
   "CANNEL_VERSION_DESC": "此版本正在等待审核，确定要撤销吗？",
   "Test Runtime": "测试环境",
   "Instance Name ID": "实例名称 ID",
+  "Agent Name ID": "代理名称 ID",
   "Create Time": "创建时间",
   "App Info": "应用信息",
   "Base Info": "基本信息",
