fix: Remove reveiw detail page standard link

--- a/src/locales/zh/apps.json
+++ b/src/locales/zh/apps.json
@@ -247,7 +247,7 @@
   "Current status": "当前状态",
   "App review detail": "应用审核详情",
   "Audit content": "审核内容",
-  "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰，",
+  "AUDIT_CONTENT_INTRODUCE": "以下信息必须真实准确，关键的操作说明需要描述详情，对于条款中的权利与义务需要描述清晰。",
   "view detail standard": "查看详细标准",
 
   "Create test runtime": "创建测试环境",
