--- a/src/locales/en/base.json
+++ b/src/locales/en/base.json
@@ -130,7 +130,7 @@
   "BUSINESS_PASS_NOTE": "After approval, this app will be submitted to the platform for technical review.",
   "TECHNICAL_PASS_NOTE": "After approval, the app developer can publish this version to the app store.",
   "REJECT_REASON_NOTE": "The above reasons will be sent to the applicant by email, please fill in carefully.",
-  "AUDIT_CONTENT_INTRODUCE": "The following information must be true and accurate, the key operational instructions need to describe the details, and the rights and obligations in the clauses need to be clearly described,",
+  "AUDIT_CONTENT_INTRODUCE": "The following information must be true and accurate, the key operational instructions need to describe the details, and the rights and obligations in the clauses need to be clearly described.",
 
 
   "PACKAGE_FILE_DESC": "Package.json file, which describes the basic information of an application or version, including name version number, etc.",
